# viy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
VIY/src/: data_summary.csv  main.py
VIY/src/model/: cnnclassifier.py  help_funcs.py
archive/python/: main_cnnclassifier.py  main_object_tracking_and_counting.py  main_yolov5model.py
archive/python/VIY/: cnnclassifier.py  data_summary.xlsx  main.py
archive/python/VIY/results/: data_summary.csv
archive/python/archived code/: cnn_classifier_inference.py
archive/python/ipynb/: TrainingAgeClassifier_pretrained.ipynb
imgs/: attribution.html
model_training/: custom_config.yaml
python/: centroidtracker.py  cnn_classifier.py  cnn_classifier_inference.py  cnnclassifier.py  img_norm_std.py  main.py  main_cnnclassifier.py  main_object_tracking_and_counting.py  yolov5model.py
python/VIY/: data_summary.csv  data_summary.xlsx  help_funcs.py  main.py
python/VIY/results/: data_summary.xlsx
python/archived code/: cnn_classifier_script.py  img_norm_std.py
python/ipynb/: TrainingAgeClassifier_pretrained.ipynb
python/ipynb/.ipynb_checkpoints/: ImgClassifier-checkpoint.ipynb  TrainingAgeClassifier_pretrained-checkpoint.ipynb
python/preprocessing/: YoloFormatConv.py
src/: main.cpp
